Added style to pop up

--- a/manifest.json
+++ b/manifest.json
@@ -30,6 +30,7 @@
                 "default": "Alt+S",
                 "mac": "Command+S"
               },
+            "global": true,
             "description": "Stop Recording"
         }
       }
